--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
 html {
   font-size: 10px;
+  width: 100%;
 }
 
 body {
   font-size: 16px;
-  width: 100vw;
-  max-width: 100vw;
-  left: 0;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   color: #1A1939;
+  margin: 0;
 }
 
 * {
@@ -15,6 +17,10 @@ body {
   text-decoration: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.hide {
+  display: none;
 }
 
 .paragraph-headers {
@@ -53,8 +59,10 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 5vh;
+  margin-top: 1rem;
   z-index: 1;
   background-color: #FCFBFD;
+  overflow-y: hidden;
 }
 
 header .nav {
@@ -139,6 +147,7 @@ header .banner {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 1rem;
+  padding-left: 2rem;
 }
 
 header .banner picture img {
@@ -168,6 +177,7 @@ header .banner picture img {
   overflow-x: hidden;
   margin-top: 7vh;
   padding-bottom: 15vh;
+  padding-left: 2rem;
 }
 
 .cards-section:first-child {
@@ -326,7 +336,7 @@ header .banner picture img {
           align-items: center;
 }
 
-.cards-section .card-container .button-container div {
+.cards-section .card-container .button-container a {
   margin-left: 1vw;
   margin-bottom: 5vh;
   width: 21vw;
@@ -347,9 +357,6 @@ header .banner picture img {
   padding: 1.8rem 3rem 2rem;
   background: #1D62E8;
   border-radius: .6rem;
-}
-
-.cards-section .card-container .button-container div a {
   font-style: normal;
   font-weight: 700;
   font-size: 1.3rem;
@@ -378,11 +385,11 @@ header .banner picture img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 4rem;
+  padding-bottom: 6rem;
 }
 
 .about-container .info-container {
-  width: 80vw;
+  width: 78vw;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 70% 30%;
@@ -418,7 +425,7 @@ header .banner picture img {
 }
 
 .about-container .how-to-container {
-  width: 80vw;
+  width: 78vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -450,11 +457,16 @@ header .banner picture img {
   list-style: none;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
+  -ms-grid-columns: 42% 58%;
+      grid-template-columns: 42% 58%;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  row-gap: 1.5rem;
   margin: 0;
+  margin-top: 1rem;
   padding: 0;
 }
 
@@ -485,8 +497,10 @@ header .banner picture img {
 
 .about-container .how-to-container__lists ul li p {
   font-weight: 400;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   line-height: 2.4rem;
+  margin: 0;
+  padding: 0;
 }
 
 .comments-policy-container {
@@ -504,10 +518,11 @@ header .banner picture img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-bottom: 7rem;
 }
 
 .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
-  width: 80vw;
+  width: 75vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -518,11 +533,18 @@ header .banner picture img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-left: 2rem;
 }
 
 .comments-policy-container .comments-container {
+  width: 81vw;
+  padding-left: 3.3vw;
   margin-top: 4.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .comments-policy-container .comments-container__header {
@@ -539,6 +561,8 @@ header .banner picture img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  height: 15vh;
+  margin-top: 1.25rem;
 }
 
 .comments-policy-container .comments-container__header .comments-headers-container {
@@ -558,7 +582,11 @@ header .banner picture img {
   gap: 2.1rem;
 }
 
-.comments-policy-container .comments-container__header .comments-button-container div {
+.comments-policy-container .comments-container__header .comments-button-container {
+  margin-left: 5rem;
+}
+
+.comments-policy-container .comments-container__header .comments-button-container a {
   width: 16vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -573,25 +601,35 @@ header .banner picture img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1.8rem 2rem;
+  padding: 1.5rem 0rem;
   background: #1D62E8;
   border-radius: 1rem;
-}
-
-.comments-policy-container .comments-container__header .comments-button-container div a {
   font-style: normal;
   font-weight: 700;
   font-size: 1.2rem;
   line-height: 1.2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   text-align: center;
   text-transform: uppercase;
   color: #FCFBFD;
+}
+
+.comments-policy-container .comments-container__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: .5rem;
 }
 
 .comments-policy-container .comments-container__content .comment-container__header .comment-header-container {
@@ -608,19 +646,267 @@ header .banner picture img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  gap: 1.5rem;
+}
+
+.comments-policy-container .comments-container__content .comment-container__paragraph {
+  font-family: 'News Cycle', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2rem;
+}
+
+.comments-policy-container .left-comments-container {
+  margin-top: 3.4rem;
+  padding-left: .4rem;
+}
+
+.comments-policy-container .left-comments-container .left-comments__header h4 {
+  margin-bottom: 1rem;
+}
+
+.comments-policy-container .left-comments-container .left-comments__warning {
+  font-family: 'Russo One', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 2.4rem;
+  text-align: center;
+  margin-top: 1.6rem;
+  margin-bottom: .5rem;
+  margin-left: 1rem;
+}
+
+.comments-policy-container .left-comments-container #warning-error {
+  color: #D82B2B;
+}
+
+.comments-policy-container .left-comments-container #warning-success {
+  color: #1D62E8;
+}
+
+.comments-policy-container .left-comments-container form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 1.5rem;
+}
+
+.comments-policy-container .left-comments-container form > p {
+  margin-bottom: -1.5rem;
+}
+
+.comments-policy-container .left-comments-container form .clear {
+  float: none;
+  clear: both;
+}
+
+.comments-policy-container .left-comments-container form .rating {
+  width: 9rem;
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  text-align: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 0;
+}
+
+.comments-policy-container .left-comments-container form .rating > label {
+  font-weight: 700;
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  cursor: pointer;
+  color: #FFD32C;
+}
+
+.comments-policy-container .left-comments-container form .rating > label:hover,
+.comments-policy-container .left-comments-container form .rating > label:hover ~ label,
+.comments-policy-container .left-comments-container form .rating > input.radio-btn:checked ~ label {
+  color: #FFD32C;
+}
+
+.comments-policy-container .left-comments-container form .rating > label:hover:before,
+.comments-policy-container .left-comments-container form .rating > label:hover ~ label:before,
+.comments-policy-container .left-comments-container form .rating > input.radio-btn:checked ~ label:before,
+.comments-policy-container .left-comments-container form .rating > input.radio-btn:checked ~ label:before {
+  content: "\2605";
+  position: absolute;
+  left: 0;
+  color: #FFD32C;
+}
+
+.comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  width: 76.5vw;
+  border: 1px solid #8E8F9020;
+  border-radius: 1rem;
+  font-family: 'News Cycle';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  color: #1A1939;
+  padding: 0 1.5rem;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.comments-policy-container .left-comments-container form #fname {
+  height: 4.2rem;
+  margin-bottom: 1rem;
+}
+
+.comments-policy-container .left-comments-container form #fcomment {
+  height: 18rem;
+  resize: none;
+  padding-top: 1rem;
+  margin-bottom: .5rem;
+}
+
+.comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  outline: none;
+  border: 1px solid rgba(142, 143, 144, 0.5);
+  -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
+          box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
+}
+
+.comments-policy-container .left-comments-container form .form-not-filled {
+  border: 1px solid #D82B2B !important;
+}
+
+.comments-policy-container .left-comments-container form button {
+  width: 22.5rem;
+  padding: 1.4rem 0rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+  text-transform: uppercase;
+  color: #FCFBFD;
+  border-radius: .6rem;
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background: #1D62E8;
+  border: 1px solid #1D62E8;
+}
+
+.comments-policy-container .left-comments-container form button:disabled, .comments-policy-container .left-comments-container form button[disabled] {
+  background: #8E8F90;
+  border: 1px solid #8E8F90;
+  cursor: not-allowed;
+}
+
+.comments-policy-container .policy-container {
+  margin-top: 9rem;
+  padding-left: .5rem;
+}
+
+.comments-policy-container .policy-container .policy__header h4 {
+  margin: 0;
+}
+
+.comments-policy-container .policy-container .policy__paragraph p {
+  margin: 0;
+  margin-top: 2.8rem;
+  padding: 0;
+  font-size: 1.3rem;
 }
 
 .footer-container {
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 1rem;
   background-color: #FCFBFD;
+}
+
+.footer-container .footer__header, .footer-container .footer-contents-container, .footer-container .footer-policy {
+  width: 81vw;
+  padding-left: 2.8vw;
+}
+
+.footer-container .footer__header h6 {
+  font-family: 'News Cycle', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+}
+
+.footer-container .footer-contents-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 22% 20% 20%;
+      grid-template-columns: 22% 20% 20%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-container .footer-contents-container .footer-content-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.footer-container .footer-contents-container .footer-content-container p {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-container .footer-contents-container .footer-content-container a {
+  color: inherit;
+}
+
+.footer-container .footer-policy {
+  margin-top: 3.5rem;
+}
+
+.footer-container .footer-policy p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.4rem;
 }
 /*# sourceMappingURL=styles.css.map */
