--- a/css/index.css
+++ b/css/index.css
@@ -2597,6 +2597,246 @@ header .banner picture img {
   header .header ul li img {
     height: 1.4rem;
   }
+  header .banner {
+    width: 100vw;
+    height: 30vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 0rem;
+    padding-left: 0rem;
+  }
+  header .banner picture img {
+    width: 92vw;
+    height: 20vh;
+  }
+  .cards-section {
+    width: 100vw;
+    max-width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 5.75vh;
+    background: #8E8F9020;
+    overflow-x: hidden;
+    margin-top: 0vh;
+    padding-bottom: 15vh;
+    padding-left: 0rem;
+  }
+  .cards-section:first-child {
+    padding-top: 1rem;
+    overflow-x: hidden;
+  }
+  .cards-section:first-child::before {
+    content: '';
+    width: 100vw;
+    height: 40vh;
+    overflow-x: hidden;
+    background-color: #FCFBFD;
+    z-index: 1;
+    position: absolute;
+    top: 40vh;
+    left: 0;
+  }
+  .cards-section .card-container {
+    width: 92vw;
+    height: 33rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 45% 45%;
+        grid-template-columns: 45% 45%;
+    -ms-grid-rows: 13vh 30vh 15vh;
+        grid-template-rows: 13vh 30vh 15vh;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-shadow: 0px 4px 20px rgba(194, 188, 198, 0.8);
+            box-shadow: 0px 4px 20px rgba(194, 188, 198, 0.8);
+    border-radius: 10px;
+    background-color: #FCFBFD;
+    position: relative;
+    z-index: 10;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+  .cards-section .card-container h2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+    height: 10vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+    padding: 0;
+    font-family: 'Russo One', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 3rem;
+    line-height: 3rem;
+    color: #1A1939;
+    margin-top: .8vh;
+  }
+  .cards-section .card-container .logo-container {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 4.7vh;
+    margin-left: 0vw;
+  }
+  .cards-section .card-container .logo-container img {
+    height: 100%;
+    width: 100%;
+  }
+  .cards-section .card-container .info-container {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-row: 50;
+    grid-row: 50%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding-top: 1vh;
+    padding-left: 0vw;
+    -webkit-column-gap: 0vh;
+            column-gap: 0vh;
+  }
+  .cards-section .card-container .info-container div {
+    width: 90%;
+    height: 8vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .cards-section .card-container .info-container div img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .cards-section .card-container .info-container div p {
+    margin-left: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.3rem;
+    line-height: 2rem;
+    color: #1A1939;
+  }
+  .cards-section .card-container .button-container {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .cards-section .card-container .button-container a {
+    margin-left: 1vw;
+    margin-bottom: 5vh;
+    width: 90%;
+    height: 4.5vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1.8rem 3rem 2rem;
+    background: #1D62E8;
+    border-radius: .6rem;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FCFBFD;
+  }
+  .cards-section .card-container:hover {
+    background-color: #F8F1FF;
+  }
   .comments-policy-container {
     background-color: #8E8F9020;
     display: -webkit-box;
@@ -3088,7 +3328,7 @@ header .banner picture img {
   }
   header .banner {
     width: 100vw;
-    height: 40vh;
+    height: 30vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -3098,7 +3338,7 @@ header .banner picture img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-top: 1rem;
+    margin-top: 0rem;
     padding-left: 0rem;
   }
   header .banner picture img {
@@ -3107,7 +3347,7 @@ header .banner picture img {
   }
   .cards-section .card-container {
     width: 92vw;
-    height: 62vh;
+    height: 30rem;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 45% 45%;
@@ -3142,9 +3382,9 @@ header .banner picture img {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     margin: 0;
     padding: 0;
     font-family: 'Russo One', sans-serif;
