--- a/css/index.scss
+++ b/css/index.scss
@@ -2180,6 +2180,180 @@ header {
                 }
             }
         }
+
+        .banner{
+          width: 100vw;
+          height: 30vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 0rem;
+          padding-left: 0rem;
+          
+          picture img {
+              width: 92vw;
+              height: 20vh;
+          }
+      }
+    }
+
+      // CARDS SECTION
+      .cards-section {
+        width: 100vw;
+        max-width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        gap: 5.75vh;
+        background: #8E8F9020;
+        overflow-x: hidden;
+        margin-top: 0vh;
+        padding-bottom: 15vh;
+        padding-left: 0rem;
+
+        &:first-child {
+            padding-top: 1rem;
+            overflow-x: hidden;
+        }
+
+        &:first-child::before{
+            content: '';
+            width: 100vw;
+            height: 40vh;
+            overflow-x: hidden;
+            background-color: #FCFBFD;
+            z-index: 1;
+            position: absolute;
+            top: 40vh;
+            left: 0;
+        }
+
+        .card-container{
+            width: 92vw;
+            height: 33rem;
+            // max-height: 50vh;
+            display: grid;
+            grid-template-columns: 45% 45% ;
+            grid-template-rows: 13vh 30vh 15vh ;
+            justify-content: center;
+            align-content: center;
+            box-shadow: 0px 4px 20px rgba(194, 188, 198, 0.8);
+            border-radius: 10px;
+            background-color: #FCFBFD;
+            position: relative;
+            z-index: 10;
+            transition: .5s;
+
+            h2 {
+                grid-column: 1/2;
+                grid-row: 1/3;
+                height: 10vh;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                margin: 0;
+                padding: 0;
+                font-family: 'Russo One', sans-serif;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 3rem;
+                line-height: 3rem;
+                color: #1A1939;
+                margin-top: .8vh;
+
+            }
+
+            .logo-container {
+                grid-column: 1/2;
+                grid-row: 2/4;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-bottom: 4.7vh;
+                margin-left: 0vw;
+                // height: 30vh;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .info-container {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                grid-row: 50%;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                padding-top: 1vh;
+                padding-left: 0vw;
+                column-gap: 0vh;
+                
+                div {
+                    width: 90%;
+                    height: 8vh;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-direction: row;
+
+                    img {
+                        width: 3rem;
+                        height: 3rem;
+                    }
+
+                    p {
+                        margin-left: 1rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.3rem;
+                        line-height: 2rem;
+                        color: #1A1939;
+                    }
+                }
+            }
+
+            .button-container {
+                grid-column: 2/3;
+                grid-row: 3/4;
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+
+                a {
+                    margin-left: 1vw;
+                    margin-bottom: 5vh;
+                    width: 90%;
+                    height: 4.5vh;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 1.8rem 3rem 2rem;
+                    background: #1D62E8;
+                    border-radius: .6rem;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.3rem;
+                    line-height: 1.3rem;
+                    // display: flex;
+                    // align-items: center;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #FCFBFD;
+                }
+            }
+        }
+
+        .card-container:hover {
+            background-color: #F8F1FF;
+        }
     }
 
     // COMMENTS SECTION 
@@ -2594,11 +2768,11 @@ header {
 
         .banner{
             width: 100vw;
-            height: 40vh;
+            height: 30vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 1rem;
+            margin-top: 0rem;
             padding-left: 0rem;
             
             picture img {
@@ -2610,11 +2784,9 @@ header {
 
     // CARDS SECTION
     .cards-section {
-        
-
         .card-container{
             width: 92vw;
-            height: 62vh;
+            height: 30rem;
             display: grid;
             grid-template-columns: 45% 45% ;
             grid-template-rows: 13vh 30vh 15vh ;
@@ -2633,7 +2805,7 @@ header {
                 height: 10vh;
                 display: flex;
                 justify-content: flex-start;
-                align-items: center;
+                align-items: flex-end;
                 margin: 0;
                 padding: 0;
                 font-family: 'Russo One', sans-serif;
