--- a/css/about.css
+++ b/css/about.css
@@ -258,7 +258,8 @@ header .header ul li img {
   padding-bottom: 7rem;
 }
 
-.comments-policy-container .comments-container, .comments-policy-container .left-comments-container {
+.comments-policy-container .comments-container,
+.comments-policy-container .left-comments-container {
   width: 78vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -489,7 +490,8 @@ header .header ul li img {
   color: #FFD32C;
 }
 
-.comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+.comments-policy-container .left-comments-container form #fname,
+.comments-policy-container .left-comments-container form #fcomment {
   width: 76.5vw;
   border: 1px solid #8E8F9020;
   border-radius: 1rem;
@@ -516,7 +518,8 @@ header .header ul li img {
   margin-bottom: .5rem;
 }
 
-.comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+.comments-policy-container .left-comments-container form #fname:focus,
+.comments-policy-container .left-comments-container form #fcomment:focus {
   outline: none;
   border: 1px solid rgba(142, 143, 144, 0.5);
   -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -569,7 +572,9 @@ header .header ul li img {
   background-color: #FCFBFD;
 }
 
-.footer-container .footer__header, .footer-container .footer-contents-container, .footer-container .footer-policy {
+.footer-container .footer__header,
+.footer-container .footer-contents-container,
+.footer-container .footer-policy {
   width: 78vw;
   padding-left: 0vw;
 }
@@ -1678,7 +1683,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1736,7 +1743,8 @@ header .header ul li img {
             flex-direction: row;
     gap: 0rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -1901,7 +1909,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -1925,7 +1934,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -1973,7 +1983,9 @@ header .header ul li img {
     margin-top: 0rem;
     background-color: #FCFBFD;
   }
-  .footer-container .footer__header, .footer-container .footer-contents-container, .footer-container .footer-policy {
+  .footer-container .footer__header,
+  .footer-container .footer-contents-container,
+  .footer-container .footer-policy {
     width: 88vw;
   }
   .footer-container .footer__header h6 {
@@ -2244,7 +2256,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2302,7 +2316,8 @@ header .header ul li img {
             flex-direction: row;
     gap: 0rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -2464,7 +2479,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -2488,7 +2504,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -2821,7 +2838,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2885,7 +2904,8 @@ header .header ul li img {
   .comments-policy-container .comments-container__header .comments-headers-container h6 {
     font-size: 1.7rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -3047,7 +3067,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -3071,7 +3092,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -3330,7 +3352,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3394,7 +3418,8 @@ header .header ul li img {
   .comments-policy-container .comments-container__header .comments-headers-container h6 {
     font-size: 1.7rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -3556,7 +3581,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -3580,7 +3606,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -3628,7 +3655,9 @@ header .header ul li img {
     margin-top: 0rem;
     background-color: #FCFBFD;
   }
-  .footer-container .footer__header, .footer-container .footer-contents-container, .footer-container .footer-policy {
+  .footer-container .footer__header,
+  .footer-container .footer-contents-container,
+  .footer-container .footer-policy {
     width: 88vw;
   }
   .footer-container .footer__header h6 {
@@ -3916,7 +3945,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3980,7 +4011,8 @@ header .header ul li img {
   .comments-policy-container .comments-container__header .comments-headers-container h6 {
     font-size: 1.6rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -4142,7 +4174,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -4166,7 +4199,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
@@ -4418,7 +4452,9 @@ header .header ul li img {
             flex-direction: column;
     padding-bottom: 7rem;
   }
-  .comments-policy-container .comments-container, .comments-policy-container .left-comments-container, .comments-policy-container .policy-container {
+  .comments-policy-container .comments-container,
+  .comments-policy-container .left-comments-container,
+  .comments-policy-container .policy-container {
     width: 88vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -4482,7 +4518,8 @@ header .header ul li img {
   .comments-policy-container .comments-container__header .comments-headers-container h6 {
     font-size: 1.4rem;
   }
-  .comments-policy-container .comments-container__header .comments-headers-container h4, .comments-policy-container .comments-container__header .comments-headers-container h6 {
+  .comments-policy-container .comments-container__header .comments-headers-container h4,
+  .comments-policy-container .comments-container__header .comments-headers-container h6 {
     padding: 0;
     margin: 0;
   }
@@ -4647,7 +4684,8 @@ header .header ul li img {
     left: 0;
     color: #FFD32C;
   }
-  .comments-policy-container .left-comments-container form #fname, .comments-policy-container .left-comments-container form #fcomment {
+  .comments-policy-container .left-comments-container form #fname,
+  .comments-policy-container .left-comments-container form #fcomment {
     width: 76.5vw;
     border: 1px solid #8E8F9020;
     border-radius: 1rem;
@@ -4671,7 +4709,8 @@ header .header ul li img {
     padding-top: 1rem;
     margin-bottom: .5rem;
   }
-  .comments-policy-container .left-comments-container form #fname:focus, .comments-policy-container .left-comments-container form #fcomment:focus {
+  .comments-policy-container .left-comments-container form #fname:focus,
+  .comments-policy-container .left-comments-container form #fcomment:focus {
     outline: none;
     border: 1px solid rgba(142, 143, 144, 0.5);
     -webkit-box-shadow: inset 0px 0px 1.6rem rgba(86, 73, 99, 0.25);
