--- a/css/index.scss
+++ b/css/index.scss
@@ -4069,12 +4069,12 @@ header {
     &:first-child::before {
       content: '';
       width: 100vw;
-      height: 30vh;
+      height: 15rem;
       overflow-x: hidden;
       background-color: #FCFBFD;
       z-index: 1;
       position: absolute;
-      top: 37vh;
+      top: 25rem;
       left: 0;
     }
 
@@ -4118,7 +4118,7 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 4.7vh;
+        margin-bottom: 1rem;
         margin-left: 0vw;
         padding-top: 2rem;
         // height: 30vh;
@@ -4172,7 +4172,8 @@ header {
         grid-row: 3/4;
         display: flex;
         justify-content: center;
-        align-items: flex-end;
+        align-items: flex-start;
+        margin-top: 1rem;
 
         a {
           margin-left: 1vw;
